# subgoal-decomposition-finetuning

./: .gitignore  README.md  pyproject.toml
scripts/: generate_dataset.py  run_sft.py  run_test.py
src/data_generation/: augmentation.py  constants.py  formatting.py  generate_examples.py  generation.py  templates.py
