[project]
name = "subgoal-decomposition-finetuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.4",
    "peft>=0.18.1",
    "pyyaml>=6.0.3",
    "torch==2.10.0",
    "transformers>=5.5.3",
    "trl>=1.0.0",
    "wandb>=0.25.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
